# Lazuli

./: Cargo.toml  Makefile  README.md
assets/fonts/: roboto.ttf.10667234671580342867-data.json  roboto.ttf.13999821785779393832-data.json  roboto.ttf.14181567042745589512-data.json  roboto.ttf.14328784610831125842-data.json  roboto.ttf.14995282512074005450-data.json  roboto.ttf.16075462740994335082-data.json  roboto.ttf.288849766933457549-data.json  roboto.ttf.3362617732389374221-data.json  roboto.ttf.5345161442500513398-data.json
assets/shaders/: base.vert  colored.frag  hello-transform.vert  moving-triangle.frag  moving-triangle.vert  text-ui-sdf.frag  text-ui.frag  text-ui.vert  texture-mask.frag  textured.frag  textured.vert  with-camera.vert
project-template/: Makefile  README.md  gitignore-template  main.rs
project-template/src/: custom_scene.rs  main.rs
scripts/: create-project.sh  run.sh
src/: bin.rs  lib.rs  main.rs  resource_id.rs  window.rs
src/app/: app.rs
src/asset_manager/: asset_collection.rs  asset_collection_test.rs  asset_manager.rs  asset_manager_mock.rs  mock_asset_manager.rs  mod.rs
src/asset_registry/: asset_entry.rs  asset_id.rs  asset_registry.rs  mod.rs
src/error/: mod.rs  opengl.rs
src/event/: event.rs  event_bus.rs  event_reader.rs  event_system.rs  events.rs  mod.rs
src/graphics/: camera.rs  color.rs  material.rs  mod.rs  scene.rs  texture.rs  transform.rs  window.rs
src/input/: button.rs  button_test.rs  glutin_mapper.rs  input.rs  mod.rs
src/log/: log.rs
src/math/: math.rs
src/renderer/: mod.rs  program.rs  (+2 more)
(+160 files in other folders)
