[package]
authors = ["Luc Drenth <luc.drenth@hotmail.com>"]
name = "lazuli"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazuli"
path = "src/lib.rs"

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
image = "0.24.6"
chrono = "0.4.24"
glam = "0.24.0"
bus = "2.4.0"
rand = "0.8.5"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
